tests/quick_start_check_contents/quick_start_check_contents.exp

Stop any already-running server.

Quick start.

Expect no errors.
No errors!

The Flow server is currently in lazy mode and is only checking 0/5 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Check contents with dependency, expect errors in contents.
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `require(...)` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:3:2
   3| (require('./dependency'): string);
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   dependency.js:2:28
   2| module.exports = ("hello": number);
                                 ^^^^^^ [1]
   test.js:3:27
   3| (require('./dependency'): string);
                                ^^^^^^ [2]



Found 1 error

No error in dependency (it is not checked).
No errors!

The Flow server is currently in lazy mode and is only checking 1/5 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Unsaved files don't have dependents, as in non-lazy mode.
No errors!

Done!
